--- a/ClientApp/src/app/track.component.css
+++ b/ClientApp/src/app/track.component.css
@@ -16,21 +16,26 @@
     border-bottom:solid 1px #1d626d;
 }
 
+.track-header {
+    display:block;
+    margin-top:10px;
+}
+
 .track-number {
     display:inline-block;
-    color:white;
-    font-weight:bold;
+    color:#eee;
+    /* font-weight:bold; */
     font-size:16px;
     padding:6px 5px 10px 13px;
 }
 
 .track-name {
-    margin-left:10px;
+    margin-left:5px;
     font-size:16px;
     /* font-weight:bold; */
     display:inline-block;
-    color:white;
-    padding:6px 5px 10px 13px;
+    color:#eee;
+    padding:6px 5px 10px 0px;
 }
 
 .delete-track-button {
@@ -70,7 +75,7 @@
 }
 
 .track-controls, .region-preview {
-    height:167px;
+    height:140px;
 }
 
 .track {
