--- a/ClientApp/src/app/track.component.html
+++ b/ClientApp/src/app/track.component.html
@@ -1,13 +1,13 @@
 <div class='track' [class.track-selected]="thisTrackIsSelected">
     <div class='row'>
-        <div class='col-2 track-controls'>
+        <div class='col-2 track-controls' (click)="toggleRegionSelected()">
             <div class='track-header'>
                 <span class='track-number'>{{ trackNumber + 1 }}.</span>
                 <span class='track-name'>{{ trackName }}</span>
             </div>
         </div>
 
-        <div class="col-9 region-preview" (click)="toggleRegionSelected()">
+        <div class="col-9 region-preview">
             <div class='col note-grid'>
                 <ul class='note-rows'>
                     <li *ngFor="let note of gridState"
