--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -243,7 +243,7 @@
 
                 <div class='piano-roll-input-group'>
                     Roll notes in
-                    <input class='form-control' type='number' value='0.01' max='10' min='0' step='0.01'
+                    <input class='form-control' type='number' max='10' min='0' step='0.01'
                         id='playOffsetPerNoteDueToRoll' style='width:70px;display:inline-block'
                         [(ngModel)]="this.configDataService.playOffsetPerNoteDueToRoll" />
                     s
